--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 <!-- Font Awesome -->
 <script src="https://kit.fontawesome.com/5b65a26ca8.js" crossorigin="anonymous"></script>
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
 <!-- Bootstrap core CSS -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
 <!-- Material Design Bootstrap -->
