--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 <link rel="stylesheet" href="%PUBLIC_URL%/css/index.css"/>
 <link id="lightswitch" rel="stylesheet" href="#">
-<title>wongus - Portfolio</title>
+<title>wongus -- Portfolio</title>
 </head>
 
 <body>
